--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,11 @@
 
 <head>
     <meta charset="UTF-8" />
+    <script type="text/javascript">
+    var host = hocchudong.com";
+    if ((host == window.location.host) && (window.location.protocol != "https:"))
+        window.location.protocol = "https";
+    </script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
